# Multi-Agent-CrewAi

./: README.md
multi_agent_ai/: README.md  pyproject.toml  report.md
multi_agent_ai/src/multi_agent_ai/: crew.py  main.py
