[project]
name = "multi_agent_ai"
version = "0.1.0"
description = "Multi-Agent-Ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
multi_agent_ai = "multi_agent_ai.main:run"
run_crew = "multi_agent_ai.main:run"
train = "multi_agent_ai.main:train"
replay = "multi_agent_ai.main:replay"
test = "multi_agent_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
